--- a/03_goddag.html
+++ b/03_goddag.html
@@ -9,7 +9,7 @@
   <body>
    
        <input type ="tekst" Id="navn">
-  <button>klik og klik i konsollen </button>
+  <button>klik og kik i konsollen </button>
    
     <script>
       document.querySelector("button").addEventListener("click", buttonClicked);
